testdata/parser/negative/19.pdl
#version 100

primitive main(in a) {
	while (true) {
		synchronous {
			if (fires(a)) {
				return 5;
			} else {
				block(a);
			}
		}
	}
}